commit of Lab 3 project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,12 @@
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+[tool.poetry]
+name = "goph420_lab03"
+version = "0.1.0"
+description = "GOPH 420/699 – Inv. and Param. Est. for Geoph. (W2025) Lab Assignment #3"
+authors = ["Khalid Abdulrahman"]
 
-[project]
-name = "goph420_lab00"
-version = "0.0.1"
-authors = [ { name="Brandon Karchewski", email="brandon.karchewski@ucalgary.ca" },]
-description="An example Python package"
-readme = "README.md"
-requires-python = ">=3.8"
-dependencies = [
- "numpy",
- "matplotlib",
-]
-classifiers = [
- "Programming Language :: Python :: 3",
- "Operating System :: OS Independent",
- "License :: OSI Approved :: GNU General Public License v3",
-]
+[tool.poetry.dependencies]
+python = "^3.10"
+numpy = "*"
+matplotlib = "*"
 
-[project.urls]
-"Homepage" = "https://github.com/karcheba1/goph420-w2025-lab00-stBK"
+
